--- a/src/components/DailySales.module.css
+++ b/src/components/DailySales.module.css
@@ -60,6 +60,7 @@
 .list {
   list-style: none;
   padding: 0;
+    color:#434040;
 }
 
 .listItem {
@@ -69,7 +70,7 @@
   align-items: center;
   padding: 0.75rem 0;
   border-bottom: 1px solid #eee;
-    color:dimgrey;
+    color:#434040;
 }
 
 .dateText {
@@ -112,7 +113,7 @@
   justify-content: center;
   align-items: center;
   z-index: 1000;
-  color: dimgrey;
+  color: #434040;
 }
 .dailyModalContent {
   background-color: white;
