--- a/src/components/MenuTable.module.css
+++ b/src/components/MenuTable.module.css
@@ -12,6 +12,8 @@
   justify-content: space-between;
   align-items: center;
   margin-bottom: 1.5rem;
+    font-size: 1.5rem;
+    font-weight: 350;
 }
 
 .header h2 {
@@ -58,10 +60,9 @@
 
 .table th {
   background-color: #f8f9fa;
-  color: #495057;
-  font-weight: 600;
-  text-transform: uppercase;
-  font-size: 0.8rem;
+  color: #41414c;
+  font-weight: 350;
+  font-size: 1.0rem;
   letter-spacing: 0.5px;
 }
 
