--- a/src/app/dashboard/whatsapp/WhatsappPage.module.css
+++ b/src/app/dashboard/whatsapp/WhatsappPage.module.css
@@ -9,9 +9,12 @@
 }
 
 .title {
-  font-size: 1.8em;
-  margin-bottom: 20px;
-  color: var(--primary-color);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 1.5rem;
+    font-size: 1.5rem;
+    font-weight: 350;
 }
 
 .iframeWrapper {
