--- a/src/components/DailySales.module.css
+++ b/src/components/DailySales.module.css
@@ -10,8 +10,7 @@
 
 .title {
   font-size: 1.5rem;
-   /*font-weight: 450; */
-  color: dimgrey; /* Reverted */
+   font-weight: 350;
   margin: 0;
   padding-bottom: 1rem;
   border-bottom: 1px solid #e9ecef;
